@@ -1,0 +1,7 @@
+---
+title: Deal with dots
+permalink: /deal.with.dots/
+---
+
+Let's test if jekyll deals properly with dots.
+
